# WeatherForecastMarathon

./: .ghc.environment.x86_64-mingw32-9.6.7  ReadMe.md  WeatherForecastMarathon.cabal  default.nix  packages.yaml  shell.nix
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: WeatherLogic.hs
static/: style.css
